# NSU-OS

1_lab/excellent/: CMakeLists.txt
1_lab/excellent/lib/include/: mythread.h
1_lab/excellent/lib/src/: mythread.c
1_lab/excellent/tests/: cancel.c  five_threads.c  main.c  print.c  retval.c
1_lab/my_threads/src/cancel/: cancel_malloc.c  push_pop_unwraped.c
1_lab/my_threads/src/detached/: pthread_struct_detach.c
1_lab/satisfactory/src/basic/: pthread_creation.c  pthread_retval.c
1_lab/satisfactory/src/cancel/: cancel.c  cancel_printf.c
1_lab/satisfactory/src/detached/: pthread_detach.c
2_lab/excellent/: 1  CMakeLists.txt  run.sh
2_lab/excellent/lib/include/: list_mutex.h  list_rwlock.h  list_spin.h
2_lab/excellent/lib/src/: list_mutex.c  list_rwlock.c  list_spin.c
2_lab/excellent/src/: threads_mutex.c  threads_rwlock.c  threads_spin.c
2_lab/satisfactory/: CMakeLists.txt
2_lab/satisfactory/lib/include/: queue.h
2_lab/satisfactory/lib/src/: queue.c  queue_cond.c  queue_mutex.c  queue_sem.c  queue_spin.c
2_lab/satisfactory/src/: queue_example.c  queue_threads.c
3_lab/: CMakeLists.txt
3_lab/lib/include/: logger.h
3_lab/lib/src/: logger.c  picohttpparser.c
3_lab/others/: logo.txt
3_lab/src/: proxy.c
os/1_lab/my_threads/: CMakeLists.txt
os/1_lab/my_threads/src/: my_thread.c  pthread_creation.c  pthread_detach.c  pthread_retval.c  pthread_struct.c  pthread_struct_detach.c  thread1.c  thread2.c  thread3.c
os/1_lab/my_threads/src/cancel/: cancel.c  cancel_malloc.c  push_pop_unwraped.c
os/1_lab/my_threads/src/detached/: pthread_struct.c
os/1_lab/my_threads/src/signal/: signal.c  top_secret_realization.c
